Alembic cache screws up mesh #51701

Closed
opened 2017-06-01 23:33:23 +02:00 by Serge Lyatin · 7 comments

System Information
Win7 64bit

Blender Version
Broken: 2.78c

Exact steps for others to reproduce the error

  • Open file
  • Export mesh as Alembic cache
  • Load cache in Mesh Sequence modifier and choose object path from the list
  • Disable Armature viewport render
  • Disable Mesh Sequence viewport render
  • Finally, enable Armature viewport render and see how mesh is screwed up
    Alembic_bug1.blend
**System Information** Win7 64bit **Blender Version** Broken: 2.78c **Exact steps for others to reproduce the error** - Open file - Export mesh as Alembic cache - Load cache in Mesh Sequence modifier and choose object path from the list - Disable Armature viewport render - Disable Mesh Sequence viewport render - Finally, enable Armature viewport render and see how mesh is screwed up [Alembic_bug1.blend](https://archive.blender.org/developer/F615531/Alembic_bug1.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SergeL

Added subscriber: @SergeL
Sybren A. Stüvel was assigned by Aaron Carlisle 2017-06-02 23:40:52 +02:00

As you can see in the 2.79 release logs, a lot of Alembic improvements have been made since 2.78c. Can you try with a recent daily build from https://builder.blender.org/download/?

As you can see in the 2.79 release logs, a lot of Alembic improvements have been made since 2.78c. Can you try with a recent daily build from https://builder.blender.org/download/?
Author

Unfortunately, v. 2.78.0-git.020bbbb-windows64 behaves the same.
Alembic_bug1.png

Unfortunately, v. 2.78.0-git.020bbbb-windows64 behaves the same. ![Alembic_bug1.png](https://archive.blender.org/developer/F616397/Alembic_bug1.png)

I can confirm this bug. The root cause is that the Mesh Sequence Cache modifier adjusts the vertices of the mesh directly. You can see this when you view the mesh in Edit Mode; the mesh will be deformed, instead of in the rest position as expected by the Armature modifier.

I can confirm this bug. The root cause is that the Mesh Sequence Cache modifier adjusts the vertices of the mesh directly. You can see this when you view the mesh in Edit Mode; the mesh will be deformed, instead of in the rest position as expected by the Armature modifier.

This issue was referenced by b6d7cdd3ce

This issue was referenced by b6d7cdd3cee9312156e20783248a3b12420b7a53

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51701
No description provided.